Fix alignment on login page

--- a/app/assets/stylesheets/registration.css.scss
+++ b/app/assets/stylesheets/registration.css.scss
@@ -41,7 +41,7 @@
 
 .remember-me {
   float:left;
-  margin-left: 13em;
+  margin-left: 4em;
   font-size: 80%;
 }
 
